# ragnarok

./: .gitignore  .pre-commit-config.yaml  .pypirc  CLAUDE.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  elo.db  hello.db  pr-format.yml  pyproject.toml  requirements.txt  run_query.sh
.claude/skills/ragnarok-dataset/: SKILL.md
.claude/skills/ragnarok-dataset/references/: datasets.md
.claude/skills/ragnarok-install/: SKILL.md
.claude/skills/ragnarok-install/references/: extras.md
.claude/skills/ragnarok-quickstart/: SKILL.md
.claude/skills/ragnarok-quickstart/references/: cli-examples.md  dataset-workflow.md  input-output-examples.md  prompt-modes.md
.claude/skills/ragnarok-verify/: SKILL.md
.claude/skills/ragnarok-verify/scripts/: verify.sh
.github/workflows/: pr-format.yml
docs/: README.md  cli-for-agents.md  elo.md  frontend.md  rag24.md  rag25.md
docs/evaluation/: decomp_pool_nugget.md  rag24.md
docs/release-notes/: release-notes-v0.0.1.md
docs/retrieval/: rag24.md
examples/: rag_demo.py  sync_rag_demo.py
src/ragnarok/: data.py  retrieve_and_generate.py
src/ragnarok/analysis/: response_analysis.py
src/ragnarok/api/: app.py  elo.db  elo.py  models.py  populate_sql.py  routes.py  runtime.py  server.py  web_server.py
src/ragnarok/api/blocks/: html_blocks.py  input_blocks.py  on_submit_blocks.py  output_blocks.py  query_model.py
src/ragnarok/cli/: __init__.py  adapters.py  config.py  dispatch.py  errors.py  introspection.py  io.py  logging_utils.py  main.py  normalize.py  operations.py  parser.py  prompt_view.py  rendering.py  responses.py  spec.py  view.py
src/ragnarok/demo/: rag_inline_hits.py  rerank_stored_retrieved_results.py
src/ragnarok/evaluate/: decomp_pooler.py  gpt_nugget_assigner.py  gpt_nugget_scorer.py  gpt_nuggetizer.py  gpt_query_decomposer.py  pooler.py  pretty_print_nuggets.py  pretty_print_umbrela.py  run_nugget_assigner.py  run_nugget_scorer.py  run_nuggetizer.py  run_query_decomposer.py  run_umbrela.py  score_nugget_assignment.py  trace_nugget_trajectory.py
src/ragnarok/generate/: api_keys.py  cohere.py  gemini.py  generator.py  gpt.py  llm.py  os_llm.py  post_processor.py  util.py  vicuna.py  zephyr.py
src/ragnarok/generate/templates/: chat_qa.py  ragnarok_templates.py
src/ragnarok/prompts/: __init__.py  template_loader.py
src/ragnarok/prompts/prompt_templates/: chatqa.yaml  ragnarok_v2.yaml  ragnarok_v3.yaml  ragnarok_v4.yaml  ragnarok_v4_biogen.yaml  ragnarok_v4_no_cite.yaml  ragnarok_v5_biogen.yaml  ragnarok_v5_biogen_no_cite.yaml
src/ragnarok/retrieve/: indices_dict.py  retriever.py  topics_dict.py
src/ragnarok/retrieve_and_rerank/: indices_dict.py  repo_info.py  restriever.py  retriever.py  topics_dict.py
src/ragnarok/scripts/: check_trec_rag24_gen.py  convert_to_trec25_format.py  quality_gate.py  query_cache.py  rag24_validation.py  rag25_validation.py  run_ragnarok.py  trec25_conversion.py  validate_trec_rag25_gen.py
test/: test_cli_main.py  test_data_roundtrip.py  test_live_openai_smoke.py  test_retrieval_paths.py  test_trec_script_helpers.py
test/analysis/: test_reasoning_support.py
test/evaluation/: test_check_trec_rag24_gen.py
test/integration/: integration_cli_regressions.py
test/retrieve/: test_PyseriniRetriever.py
