[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyragnarok"
version = "0.0.1"
description = "A package to running RAG models, especially for the TREC 2023 Retrieval Augmented Generation (RAG) track."
readme = "README.md"
authors = [
    { name = "Ronak Pradeep", email = "rpradeep@uwaterloo.ca" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Retrieval-Augmented Generation", "RAG", "OpenAI", "Cohere", "TREC", "LLM"]
dynamic = ["dependencies"]
requires-python = ">= 3.11"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
cloud = [
    "cohere>=5.3.4",
    "openai>=1.30.5",
    "tiktoken>=0.6.0",
]
local = [
    "fschat[model_worker]>=0.2.36",
    "spacy==3.7.2",
    "stanza>=1.8.2",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.40.1",
    "vllm>=0.4.3",
]
api = [
    "flask>=3.0.0",
    "gradio==4.26.0",
    "pandas>=2.2.2",
]
pyserini = [
    "pyserini>=0.44.0",
]
all = [
    "cohere>=5.3.4",
    "openai>=1.30.5",
    "tiktoken>=0.6.0",
    "fschat[model_worker]>=0.2.36",
    "spacy==3.7.2",
    "stanza>=1.8.2",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.40.1",
    "vllm>=0.4.3",
    "flask>=3.0.0",
    "gradio==4.26.0",
    "pandas>=2.2.2",
    "pyserini>=0.44.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/castorini/ragnarok"

[project.scripts]
ragnarok = "ragnarok.cli.main:main"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"README.md" = [
    "{version}",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "ragnarok",
    "ragnarok.analyze",
    "ragnarok.api",
    "ragnarok.cli",
    "ragnarok.demo",
    "ragnarok.evaluate",
    "ragnarok.generate",
    "ragnarok.generate.templates",
    "ragnarok.retrieve_and_rerank",
    "ragnarok.scripts",
]
namespaces = false

[tool.setuptools]
provides = ["ragnarok"]
